--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,12 @@ dependencies {
         implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
         // Testing Navigation
         androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    // Retrofit
+        implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+        implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // Lombok
+        implementation 'org.projectlombok:lombok:1.18.16'
+        annotationProcessor  'org.projectlombok:lombok:1.18.16'
 }
