--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -65,4 +66,11 @@ dependencies {
     // Lombok
         implementation 'org.projectlombok:lombok:1.18.16'
         annotationProcessor  'org.projectlombok:lombok:1.18.16'
+
+    // Glide
+        implementation 'com.github.bumptech.glide:glide:4.9.0'
+        annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    // Multidex
+        implementation 'com.android.support:multidex:1.0.3'
 }
