--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     // Retrofit
         implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
         implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+        implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
     // Lombok
         implementation 'org.projectlombok:lombok:1.18.16'
@@ -88,4 +89,8 @@ dependencies {
         testImplementation "androidx.room:room-testing:$room_version"
         // optional - Paging 3 Integration
         implementation "androidx.room:room-paging:2.4.0-beta01"
+
+    // RxJava
+        implementation 'io.reactivex.rxjava2:rxjava:2.2.15'
+        implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
