--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
 }
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 31
@@ -28,8 +31,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildFeatures
-    {
+    buildFeatures {
         dataBinding = true
         viewBinding = true
     }
@@ -64,9 +66,9 @@ dependencies {
         implementation 'com.squareup.retrofit2:retrofit:2.9.0'
         implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
-    // Lombok
-        implementation 'org.projectlombok:lombok:1.18.16'
-        annotationProcessor  'org.projectlombok:lombok:1.18.16'
+    // Lombok.... kapt랑 호환이 안 됨...
+//        implementation 'org.projectlombok:lombok:1.18.16'
+//        annotationProcessor  'org.projectlombok:lombok:1.18.16'
 
     // Glide
         implementation 'com.github.bumptech.glide:glide:4.9.0'
@@ -78,7 +80,9 @@ dependencies {
     // Room
         def room_version = "2.3.0"
         implementation "androidx.room:room-runtime:$room_version"
-        annotationProcessor "androidx.room:room-compiler:$room_version"
+//        annotationProcessor "androidx.room:room-compiler:$room_version"
+        // To use Kotlin annotation processing tool (kapt)
+        kapt "androidx.room:room-compiler:$room_version"
         // optional - RxJava2 support for Room
         implementation "androidx.room:room-rxjava2:$room_version"
         // optional - RxJava3 support for Room
@@ -93,4 +97,8 @@ dependencies {
     // RxJava
         implementation 'io.reactivex.rxjava2:rxjava:2.2.15'
         implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    // Hilt
+        implementation "com.google.dagger:hilt-android:2.28-alpha"
+        kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 }
