--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,10 +95,20 @@ dependencies {
         implementation "androidx.room:room-paging:2.4.0-beta01"
 
     // RxJava
-        implementation 'io.reactivex.rxjava2:rxjava:2.2.15'
-        implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+//        implementation 'io.reactivex.rxjava2:rxjava:2.2.15'
+//        implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+        implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
+        implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
     // Hilt
-        implementation "com.google.dagger:hilt-android:2.28-alpha"
-        kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+        implementation "com.google.dagger:hilt-android:2.31-alpha"
+//        kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
+        kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
+        implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+//        kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
+
+    // ViewModel
+        implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
+        implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+        implementation "androidx.fragment:fragment-ktx:1.2.5"
 }
